feat(data_prep): extrair mes_referencia e padronizar tipo_pagamento

--- a/notebooks/02_data_understanding.ipynb
+++ b/notebooks/02_data_understanding.ipynb
@@ -21,18 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6a8c9f6f-d08e-4248-b5cb-ca39fcef8fdf",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pathlib import Path"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "025ba5ff-4b35-4712-9ecd-759f8723ea8c",
    "metadata": {},
    "outputs": [],
@@ -43,33 +44,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4ef8a15c-12d1-42c1-b1f8-65436cbdfd72",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(12,\n",
-       " [WindowsPath('../data/raw/abr2025.csv'),\n",
-       "  WindowsPath('../data/raw/ago2025.csv'),\n",
-       "  WindowsPath('../data/raw/dez2025.csv'),\n",
-       "  WindowsPath('../data/raw/fev2025.csv'),\n",
-       "  WindowsPath('../data/raw/jan2025.csv'),\n",
-       "  WindowsPath('../data/raw/jul2025.csv'),\n",
-       "  WindowsPath('../data/raw/jun2025.csv'),\n",
-       "  WindowsPath('../data/raw/mai2025.csv'),\n",
-       "  WindowsPath('../data/raw/mar2025.csv'),\n",
-       "  WindowsPath('../data/raw/nov2025.csv'),\n",
-       "  WindowsPath('../data/raw/out2025.csv'),\n",
-       "  WindowsPath('../data/raw/set2025.csv')])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -82,21 +60,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9d5bd82e-6dac-4bb9-bc7b-6ff25ef4d430",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(24009, 16)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs = []\n",
     "\n",
@@ -112,193 +79,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "f451c36b-22b5-42b7-84c3-e4a3702225c4",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Referência</th>\n",
-       "      <th>Nome</th>\n",
-       "      <th>Cargo</th>\n",
-       "      <th>Data Admissão</th>\n",
-       "      <th>Tipo de Regime</th>\n",
-       "      <th>Descontos</th>\n",
-       "      <th>Liquido</th>\n",
-       "      <th>Data Desligamento</th>\n",
-       "      <th>Proventos</th>\n",
-       "      <th>Contrato</th>\n",
-       "      <th>Atividade</th>\n",
-       "      <th>Nome Atividade</th>\n",
-       "      <th>Tipo de Contrato</th>\n",
-       "      <th>Data Prevista Termino Contrato</th>\n",
-       "      <th>Carga Horária (Sem.)</th>\n",
-       "      <th>arquivo_origem</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
-       "      <td>MECANICO II</td>\n",
-       "      <td>08/04/1991</td>\n",
-       "      <td>REGIME PROPRIO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Efetivo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>abr2025.csv</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Folha Mensal - Abril</td>\n",
-       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
-       "      <td>MECANICO II</td>\n",
-       "      <td>08/04/1991</td>\n",
-       "      <td>REGIME PROPRIO</td>\n",
-       "      <td>1.584,02</td>\n",
-       "      <td>3.603,75</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.187,77</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Efetivo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>abr2025.csv</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>ADA ESTER ARCHILA</td>\n",
-       "      <td>TECNICO EM ENFERMAGEM</td>\n",
-       "      <td>04/12/2023</td>\n",
-       "      <td>REGIME PROPRIO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Efetivo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.00</td>\n",
-       "      <td>abr2025.csv</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Folha Mensal - Abril</td>\n",
-       "      <td>ADA ESTER ARCHILA</td>\n",
-       "      <td>TECNICO EM ENFERMAGEM</td>\n",
-       "      <td>04/12/2023</td>\n",
-       "      <td>REGIME PROPRIO</td>\n",
-       "      <td>1.330,84</td>\n",
-       "      <td>5.432,23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6.763,07</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Efetivo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30.00</td>\n",
-       "      <td>abr2025.csv</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Folha Complementar - Abril</td>\n",
-       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
-       "      <td>JARDINEIRO</td>\n",
-       "      <td>08/04/1991</td>\n",
-       "      <td>REGIME PROPRIO</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.000,00</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Efetivo</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>40.00</td>\n",
-       "      <td>abr2025.csv</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   Referência                          Nome  \\\n",
-       "0  Folha Complementar - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
-       "1        Folha Mensal - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
-       "2  Folha Complementar - Abril             ADA ESTER ARCHILA   \n",
-       "3        Folha Mensal - Abril             ADA ESTER ARCHILA   \n",
-       "4  Folha Complementar - Abril       ADAO RODRIGUES DE JESUS   \n",
-       "\n",
-       "                   Cargo Data Admissão  Tipo de Regime Descontos   Liquido  \\\n",
-       "0            MECANICO II    08/04/1991  REGIME PROPRIO       NaN  1.000,00   \n",
-       "1            MECANICO II    08/04/1991  REGIME PROPRIO  1.584,02  3.603,75   \n",
-       "2  TECNICO EM ENFERMAGEM    04/12/2023  REGIME PROPRIO       NaN  1.000,00   \n",
-       "3  TECNICO EM ENFERMAGEM    04/12/2023  REGIME PROPRIO  1.330,84  5.432,23   \n",
-       "4             JARDINEIRO    08/04/1991  REGIME PROPRIO       NaN  1.000,00   \n",
-       "\n",
-       "  Data Desligamento Proventos  Contrato  Atividade Nome Atividade  \\\n",
-       "0               NaN  1.000,00      1.00        NaN            NaN   \n",
-       "1               NaN  5.187,77      1.00        NaN            NaN   \n",
-       "2               NaN  1.000,00      1.00        NaN            NaN   \n",
-       "3               NaN  6.763,07      1.00        NaN            NaN   \n",
-       "4               NaN  1.000,00      1.00        NaN            NaN   \n",
-       "\n",
-       "  Tipo de Contrato  Data Prevista Termino Contrato  Carga Horária (Sem.)  \\\n",
-       "0          Efetivo                             NaN                 40.00   \n",
-       "1          Efetivo                             NaN                 40.00   \n",
-       "2          Efetivo                             NaN                 30.00   \n",
-       "3          Efetivo                             NaN                 30.00   \n",
-       "4          Efetivo                             NaN                 40.00   \n",
-       "\n",
-       "  arquivo_origem  \n",
-       "0    abr2025.csv  \n",
-       "1    abr2025.csv  \n",
-       "2    abr2025.csv  \n",
-       "3    abr2025.csv  \n",
-       "4    abr2025.csv  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_raw.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f2edbf7-3a9c-4ee1-9473-8c84d0432f40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.tail()"
    ]
   },
   {
@@ -318,200 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1b53e2b9-ac61-466d-b4dc-84832e7ba21d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'abr2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'ago2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'dez2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'fev2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'jan2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'jul2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'jun2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'mai2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'mar2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'nov2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'out2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'},\n",
-       " 'set2025.csv': {'Atividade',\n",
-       "  'Carga Horária (Sem.)',\n",
-       "  'Cargo',\n",
-       "  'Contrato',\n",
-       "  'Data Admissão',\n",
-       "  'Data Desligamento',\n",
-       "  'Data Prevista Termino Contrato',\n",
-       "  'Descontos',\n",
-       "  'Liquido',\n",
-       "  'Nome',\n",
-       "  'Nome Atividade',\n",
-       "  'Proventos',\n",
-       "  'Referência',\n",
-       "  'Tipo de Contrato',\n",
-       "  'Tipo de Regime'}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "schemas = {\n",
     "    file.name: set(pd.read_csv(file, encoding=\"latin1\", sep=\";\", nrows=0).columns)\n",
@@ -523,24 +129,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "13695b6e-6abd-4370-891f-73b4c6b56575",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unique_schemas = set(tuple(sorted(cols)) for cols in schemas.values())\n",
     "len(unique_schemas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d07d41b5-42e9-433f-80f5-cb9f6d893775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_raw = Path(\"../data/raw\")\n",
+    "\n",
+    "dfs = []\n",
+    "\n",
+    "for file in path_raw.glob(\"*.csv*\"):\n",
+    "    df = pd.read_csv(file, sep=\";\", encoding=\"latin1\")\n",
+    "    df[\"arquivo_origem\"] = file.name\n",
+    "    dfs.append(df)\n",
+    "\n",
+    "df_raw = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "df_raw.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4f0f67e-371f-4ac0-a98d-3a4e92b970e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94999c5f-21ea-4890-96f1-7a89ba168b6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Contar servidores únicos\n",
+    "num_servidores = df_raw[\"Nome\"].nunique()\n",
+    "\n",
+    "print(f\"Total de servidores únicos no ano: {num_servidores}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34c1dc8d-7729-4015-95a7-8bbe4b60283f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "servidores_unicos = df_raw[\"Nome\"].drop_duplicates().sort_values()\n",
+    "servidores_unicos.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e29944f-d978-40fb-9aea-e754dac82556",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Separar tipo de pagamento e mês\n",
+    "df_raw[[\"tipo_pagamento\", \"mes_nome\"]] = df_raw[\"Referência\"].str.split(\" - \", expand=True)\n",
+    "\n",
+    "# Mapear mês para número\n",
+    "mapa_meses = {\n",
+    "    \"Janeiro\": 1,\n",
+    "    \"Fevereiro\": 2,\n",
+    "    \"Março\": 3,\n",
+    "    \"Abril\": 4,\n",
+    "    \"Maio\": 5,\n",
+    "    \"Junho\": 6,\n",
+    "    \"Julho\": 7,\n",
+    "    \"Agosto\": 8,\n",
+    "    \"Setembro\": 9,\n",
+    "    \"Outubro\": 10,\n",
+    "    \"Novembro\": 11,\n",
+    "    \"Dezembro\": 12\n",
+    "}\n",
+    "\n",
+    "df_raw[\"mes_num\"] = df_raw[\"mes_nome\"].map(mapa_meses)\n",
+    "\n",
+    "# Conferir resultado\n",
+    "df_raw[[\"Referência\", \"tipo_pagamento\", \"mes_nome\", \"mes_num\"]].head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e48881c-d694-43f5-b222-69b6f80e4cc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw = df_raw[df_raw[\"Referência\"].notna()]"
    ]
   },
   {
