feat: anonimização de servidores via hash e correções no data preparation

--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -17,11 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "899a1044-2e32-4c99-9668-f8e12fe64319",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import hashlib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from pathlib import Path"
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "7f9bfd7a-93fe-4d20-974b-fa81955adc43",
    "metadata": {},
    "outputs": [
@@ -39,7 +40,7 @@
        "(24009, 16)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "5a2b3d1a-2b18-43fe-8dbb-59dac5246a52",
    "metadata": {},
    "outputs": [
@@ -78,7 +79,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "e2ccc4ed-af10-400c-b2f5-3eeabb741fad",
    "metadata": {},
    "outputs": [],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "bb664d3b-78ba-4d33-aaee-4a0ae9c589c4",
    "metadata": {},
    "outputs": [
@@ -321,7 +322,7 @@
        "4    abr2025.csv  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "26852d38-1c07-42de-a242-13bde42c1c61",
    "metadata": {},
    "outputs": [],
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "688c029f-f3f8-42de-8bc9-062b246904e1",
    "metadata": {},
    "outputs": [
@@ -530,7 +531,7 @@
        "4    abr2025.csv  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "9824fa3b-b1d9-4002-9f68-35ee64e98091",
    "metadata": {},
    "outputs": [
@@ -615,7 +616,7 @@
        "4  Folha Complementar - Abril  vale_alimentacao          Abril"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "ed303d9e-6252-47d3-8423-5fb50304bd15",
    "metadata": {},
    "outputs": [
@@ -831,7 +832,7 @@
        "24007                   30.0    set2025.csv       Setembro  vale_alimentacao  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "id": "1abead0c-aa9b-4f33-bd71-f81cb8cdbc8f",
    "metadata": {},
    "outputs": [
@@ -910,7 +911,7 @@
        "Name: nome, Length: 980, dtype: object"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "eaad618c-a0a8-41b4-84c4-a3edb8c87224",
    "metadata": {},
    "outputs": [
@@ -1036,7 +1037,7 @@
        "[980 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "id": "cd90a56a-7d79-45fd-9f23-b69071f68a1c",
    "metadata": {},
    "outputs": [],
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "id": "5273c182-95b6-45b8-ba19-5ef7d0bf759b",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1137,7 @@
        "4            ADEMILTON MONTEIRO             M"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "id": "b5732d12-f5b5-4792-9211-fe2e87824789",
    "metadata": {},
    "outputs": [],
@@ -1167,17 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c7baddb8-e572-41dd-95fa-8c2b99d906e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_prepared = df_prepared.drop(columns=[\"sexo_inferido_x\", \"sexo_inferido_y\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 34,
    "id": "01eaa258-1a6b-4bdf-b18f-8e95771d77d7",
    "metadata": {},
    "outputs": [],
@@ -1191,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "id": "311f6467-0e59-4210-90cc-a5b11700cbf6",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1195,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 36,
    "id": "58be6c11-7f88-40b4-a486-685d595a755e",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1417,7 @@
        "4       ADAO RODRIGUES DE JESUS             M  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,9 +1427,151 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8795b7ad-ee99-46c1-9163-19efbf228fdd",
+   "metadata": {},
+   "source": [
+    "## Anonimização dos dados dos servidores\n",
+    "\n",
+    "A partir deste ponto, os nomes dos servidores deixam de ser utilizados diretamente no processo de análise.\n",
+    "\n",
+    "Embora os dados analisados sejam públicos, a anonimização é adotada como **boa prática em Ciência de Dados**, especialmente quando o objetivo é:\n",
+    "\n",
+    "- Focar em padrões, distribuições e comportamentos agregados\n",
+    "- Evitar exposição desnecessária de informações pessoais\n",
+    "- Tornar o projeto reutilizável em outros contextos e datasets sensíveis\n",
+    "\n",
+    "### Estratégia adotada\n",
+    "\n",
+    "A anonimização foi realizada por meio da **geração de um identificador único irreversível** para cada servidor, utilizando uma função de hash criptográfico.\n",
+    "\n",
+    "Características da abordagem:\n",
+    "\n",
+    "- O mesmo nome sempre gera o mesmo identificador\n",
+    "- O processo é determinístico\n",
+    "- Não é possível recuperar o nome original a partir do identificador\n",
+    "- O identificador pode ser usado com segurança como chave em análises futuras\n",
+    "\n",
+    "### Algoritmo utilizado\n",
+    "\n",
+    "Foi utilizado o algoritmo **SHA-256**, disponível na biblioteca padrão do Python (`hashlib`), por ser amplamente adotado e seguro para este tipo de aplicação.\n",
+    "\n",
+    "### Impacto na análise\n",
+    "\n",
+    "Após a criação do identificador anonimizado:\n",
+    "\n",
+    "- O nome do servidor deixa de ser necessário para análises estatísticas\n",
+    "- As análises passam a utilizar exclusivamente o identificador (`id_servidor`)\n",
+    "- Variáveis como sexo inferido, remuneração e período permanecem preservadas\n",
+    "\n",
+    "Essa abordagem garante um equilíbrio entre **qualidade analítica**, **reprodutibilidade** e **responsabilidade no uso dos dados**.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "215f5188-b04b-4609-a534-76acbd0408ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gerar_id_servidor(nome):\n",
+    "    if pd.isna(nome):\n",
+    "        return None\n",
+    "    return hashlib.sha256(nome.encode(\"utf-8\")).hexdigest()\n",
+    "\n",
+    "df_prepared[\"id_servidor\"] = df_prepared[\"nome_servidor_norm\"].apply(gerar_id_servidor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "798a5915-b95b-44c4-a461-d6a4a511b17b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nome_servidor_norm</th>\n",
+       "      <th>id_servidor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             nome_servidor_norm  \\\n",
+       "0  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "1  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "2             ADA ESTER ARCHILA   \n",
+       "3             ADA ESTER ARCHILA   \n",
+       "4       ADAO RODRIGUES DE JESUS   \n",
+       "\n",
+       "                                         id_servidor  \n",
+       "0  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...  \n",
+       "1  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...  \n",
+       "2  348b58a2d1473088be45887aaa8b05de2944865139083c...  \n",
+       "3  348b58a2d1473088be45887aaa8b05de2944865139083c...  \n",
+       "4  28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[[\"nome_servidor_norm\", \"id_servidor\"]].head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36ac5f70-6150-4c07-bac1-efb768581cb2",
+   "id": "27a3a84c-9a35-45dc-8271-0d36024cc0f0",
    "metadata": {},
    "outputs": [],
    "source": []
