--- a/notebooks/03_data_preparation.ipynb
+++ b/notebooks/03_data_preparation.ipynb
@@ -2632,7 +2632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "id": "a61fb1c6-a0b9-42ae-beae-91d8ada774b4",
    "metadata": {},
    "outputs": [
@@ -2686,7 +2686,7 @@
        "      <td>Folha Complementar - Abril</td>\n",
        "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
        "      <td>MECANICO II</td>\n",
-       "      <td>08/04/1991</td>\n",
+       "      <td>1991-04-08</td>\n",
        "      <td>REGIME PROPRIO</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.000,00</td>\n",
@@ -2710,7 +2710,7 @@
        "      <td>Folha Mensal - Abril</td>\n",
        "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
        "      <td>MECANICO II</td>\n",
-       "      <td>08/04/1991</td>\n",
+       "      <td>1991-04-08</td>\n",
        "      <td>REGIME PROPRIO</td>\n",
        "      <td>1.584,02</td>\n",
        "      <td>3.603,75</td>\n",
@@ -2734,7 +2734,7 @@
        "      <td>Folha Complementar - Abril</td>\n",
        "      <td>ADA ESTER ARCHILA</td>\n",
        "      <td>TECNICO EM ENFERMAGEM</td>\n",
-       "      <td>04/12/2023</td>\n",
+       "      <td>2023-12-04</td>\n",
        "      <td>REGIME PROPRIO</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.000,00</td>\n",
@@ -2758,7 +2758,7 @@
        "      <td>Folha Mensal - Abril</td>\n",
        "      <td>ADA ESTER ARCHILA</td>\n",
        "      <td>TECNICO EM ENFERMAGEM</td>\n",
-       "      <td>04/12/2023</td>\n",
+       "      <td>2023-12-04</td>\n",
        "      <td>REGIME PROPRIO</td>\n",
        "      <td>1.330,84</td>\n",
        "      <td>5.432,23</td>\n",
@@ -2782,7 +2782,7 @@
        "      <td>Folha Complementar - Abril</td>\n",
        "      <td>ADAO RODRIGUES DE JESUS</td>\n",
        "      <td>JARDINEIRO</td>\n",
-       "      <td>08/04/1991</td>\n",
+       "      <td>1991-04-08</td>\n",
        "      <td>REGIME PROPRIO</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1.000,00</td>\n",
@@ -2815,11 +2815,11 @@
        "4  Folha Complementar - Abril       ADAO RODRIGUES DE JESUS   \n",
        "\n",
        "                   cargo data_admissao     tipo_regime descontos   liquido  \\\n",
-       "0            MECANICO II    08/04/1991  REGIME PROPRIO       NaN  1.000,00   \n",
-       "1            MECANICO II    08/04/1991  REGIME PROPRIO  1.584,02  3.603,75   \n",
-       "2  TECNICO EM ENFERMAGEM    04/12/2023  REGIME PROPRIO       NaN  1.000,00   \n",
-       "3  TECNICO EM ENFERMAGEM    04/12/2023  REGIME PROPRIO  1.330,84  5.432,23   \n",
-       "4             JARDINEIRO    08/04/1991  REGIME PROPRIO       NaN  1.000,00   \n",
+       "0            MECANICO II    1991-04-08  REGIME PROPRIO       NaN  1.000,00   \n",
+       "1            MECANICO II    1991-04-08  REGIME PROPRIO  1.584,02  3.603,75   \n",
+       "2  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO       NaN  1.000,00   \n",
+       "3  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO  1.330,84  5.432,23   \n",
+       "4             JARDINEIRO    1991-04-08  REGIME PROPRIO       NaN  1.000,00   \n",
        "\n",
        "  data_desligamento proventos  contrato  ...  carga_horaria_semanal  \\\n",
        "0               NaN  1.000,00       1.0  ...                   40.0   \n",
@@ -2859,7 +2859,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2877,9 +2877,355 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a8b5592-0360-40f1-9a74-f2737ae0a549",
+   "metadata": {},
+   "source": [
+    "## Tratando coluna data_admissao"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d6624dd-caa0-4a60-895b-1323eb5a14aa",
+   "metadata": {},
+   "source": [
+    "- Verificando nulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "80aad24f-a3ba-4f22-8fc4-888f11491a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"data_admissao\"].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "e780767f-9dc5-4143-95f6-bb8e24d5ef2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count          23997\n",
+       "unique           440\n",
+       "top       2025-02-03\n",
+       "freq            1066\n",
+       "Name: data_admissao, dtype: object"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared[\"data_admissao\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08ef82aa-c001-4e88-b6b8-a23b824d208b",
+   "metadata": {},
+   "source": [
+    "- Transformando o tipo da coluna para date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "fcc2ba6e-ee37-4007-aa73-88568303cf26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_prepared[\"data_admissao\"] = (\n",
+    "    pd.to_datetime(\n",
+    "        df_prepared[\"data_admissao\"],\n",
+    "        errors=\"coerce\",\n",
+    "        dayfirst=True\n",
+    "    )\n",
+    "    .dt.date\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "78322b55-0b65-4bbb-ad34-aed77b88ac20",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>referencia</th>\n",
+       "      <th>nome</th>\n",
+       "      <th>cargo</th>\n",
+       "      <th>data_admissao</th>\n",
+       "      <th>tipo_regime</th>\n",
+       "      <th>descontos</th>\n",
+       "      <th>liquido</th>\n",
+       "      <th>data_desligamento</th>\n",
+       "      <th>proventos</th>\n",
+       "      <th>contrato</th>\n",
+       "      <th>...</th>\n",
+       "      <th>carga_horaria_semanal</th>\n",
+       "      <th>arquivo_origem</th>\n",
+       "      <th>mes_referencia</th>\n",
+       "      <th>tipo_pagamento</th>\n",
+       "      <th>nome_servidor_norm</th>\n",
+       "      <th>sexo_inferido</th>\n",
+       "      <th>id_servidor</th>\n",
+       "      <th>cargo_norm</th>\n",
+       "      <th>categoria_cargo</th>\n",
+       "      <th>cargo_categorizado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1.584,02</td>\n",
+       "      <td>3.603,75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.187,77</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ACACIO DONIZETTI DE OLIVEIRA</td>\n",
+       "      <td>M</td>\n",
+       "      <td>5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...</td>\n",
+       "      <td>MECANICO II</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Folha Mensal - Abril</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>1.330,84</td>\n",
+       "      <td>5.432,23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.763,07</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>folha_mensal</td>\n",
+       "      <td>ADA ESTER ARCHILA</td>\n",
+       "      <td>F</td>\n",
+       "      <td>348b58a2d1473088be45887aaa8b05de2944865139083c...</td>\n",
+       "      <td>TECNICO EM ENFERMAGEM</td>\n",
+       "      <td>saude</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Folha Complementar - Abril</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>1991-04-08</td>\n",
+       "      <td>REGIME PROPRIO</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.000,00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>abr2025.csv</td>\n",
+       "      <td>Abril</td>\n",
+       "      <td>vale_alimentacao</td>\n",
+       "      <td>ADAO RODRIGUES DE JESUS</td>\n",
+       "      <td>M</td>\n",
+       "      <td>28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...</td>\n",
+       "      <td>JARDINEIRO</td>\n",
+       "      <td>operacional</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   referencia                          nome  \\\n",
+       "0  Folha Complementar - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "1        Folha Mensal - Abril  ACACIO DONIZETTI DE OLIVEIRA   \n",
+       "2  Folha Complementar - Abril             ADA ESTER ARCHILA   \n",
+       "3        Folha Mensal - Abril             ADA ESTER ARCHILA   \n",
+       "4  Folha Complementar - Abril       ADAO RODRIGUES DE JESUS   \n",
+       "\n",
+       "                   cargo data_admissao     tipo_regime descontos   liquido  \\\n",
+       "0            MECANICO II    1991-04-08  REGIME PROPRIO       NaN  1.000,00   \n",
+       "1            MECANICO II    1991-04-08  REGIME PROPRIO  1.584,02  3.603,75   \n",
+       "2  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO       NaN  1.000,00   \n",
+       "3  TECNICO EM ENFERMAGEM    2023-12-04  REGIME PROPRIO  1.330,84  5.432,23   \n",
+       "4             JARDINEIRO    1991-04-08  REGIME PROPRIO       NaN  1.000,00   \n",
+       "\n",
+       "  data_desligamento proventos  contrato  ...  carga_horaria_semanal  \\\n",
+       "0               NaN  1.000,00       1.0  ...                   40.0   \n",
+       "1               NaN  5.187,77       1.0  ...                   40.0   \n",
+       "2               NaN  1.000,00       1.0  ...                   30.0   \n",
+       "3               NaN  6.763,07       1.0  ...                   30.0   \n",
+       "4               NaN  1.000,00       1.0  ...                   40.0   \n",
+       "\n",
+       "  arquivo_origem mes_referencia    tipo_pagamento  \\\n",
+       "0    abr2025.csv          Abril  vale_alimentacao   \n",
+       "1    abr2025.csv          Abril      folha_mensal   \n",
+       "2    abr2025.csv          Abril  vale_alimentacao   \n",
+       "3    abr2025.csv          Abril      folha_mensal   \n",
+       "4    abr2025.csv          Abril  vale_alimentacao   \n",
+       "\n",
+       "             nome_servidor_norm sexo_inferido  \\\n",
+       "0  ACACIO DONIZETTI DE OLIVEIRA             M   \n",
+       "1  ACACIO DONIZETTI DE OLIVEIRA             M   \n",
+       "2             ADA ESTER ARCHILA             F   \n",
+       "3             ADA ESTER ARCHILA             F   \n",
+       "4       ADAO RODRIGUES DE JESUS             M   \n",
+       "\n",
+       "                                         id_servidor             cargo_norm  \\\n",
+       "0  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "1  5a69806a2b26328cb82b24260282ba8037ddf3a430cff8...            MECANICO II   \n",
+       "2  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "3  348b58a2d1473088be45887aaa8b05de2944865139083c...  TECNICO EM ENFERMAGEM   \n",
+       "4  28b810f6dcab5e62dcaddb7d93fa4384c7858119885ee4...             JARDINEIRO   \n",
+       "\n",
+       "  categoria_cargo cargo_categorizado  \n",
+       "0     operacional               True  \n",
+       "1     operacional               True  \n",
+       "2           saude               True  \n",
+       "3           saude               True  \n",
+       "4     operacional               True  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_prepared.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "e3a7c6d7-daf2-4699-9ebe-6d67744da9c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.date"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df_prepared['data_admissao'].dropna().iloc[0])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8b5592-0360-40f1-9a74-f2737ae0a549",
+   "id": "08c51ce0-0a32-492b-adc9-ad1f92b76aed",
    "metadata": {},
    "outputs": [],
    "source": []
